@@ -11,7 +11,12 @@ setup(
     url='http://github.com/Suor/django-cacheops',
     license='BSD',
 
-    packages=['cacheops', 'cacheops.management', 'cacheops.management.commands'],
+    packages=[
+        'cacheops',
+        'cacheops.management',
+        'cacheops.management.commands',
+        'cacheops.templatetags'
+    ],
     install_requires=[
         'django>=1.2',
         'redis>=2.4.12',
