@@ -1,4 +1,5 @@
 - Django 1.6+ support
+- added Django template tags
 - fixed caching querysets combined with | and & operators
 
 1.0.3
